--- a/index.css
+++ b/index.css
@@ -111,6 +111,23 @@ html, body{
 .icon-link:hover{
     background-color: lightgray;
 }
+.button {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.resumeBtn:hover {
+  background-color: #555555;
+  color: white;
+}
 @media only screen and (max-width: 700px) {
     .split-line{
         display: none;
